updated thingi10k voxels data type to float32

--- a/notebooks/stl_voxel_vae.ipynb
+++ b/notebooks/stl_voxel_vae.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "154"
+       "8951"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
     "\n",
     "thingi = Thingi10k.init10k(pctile=.9)\n",
     "# apply filter\n",
-    "thingi.filter_by_tag('animal')\n",
+    "#thingi.filter_by_tag('animal')\n",
     "#thingi.filter_to_just_one()\n",
     "#thingi = Thingi10k.init10()\n",
     "#thingi = Thingi10k.init10(pctile=.1)\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,78 +157,86 @@
     "    \n",
     "    def _make_encoder(self, input_x, keep_prob, trainable):\n",
     "        \n",
-    "        # tf conv3d: https://www.tensorflow.org/api_docs/python/tf/layers/conv3d\n",
-    "        # tf glorot init: https://www.tensorflow.org/api_docs/python/tf/glorot_uniform_initializer\n",
-    "        conv1 = tf.layers.conv3d(input_x,\n",
-    "                                 filters=8,\n",
-    "                                 kernel_size=[3, 3, 3],\n",
-    "                                 strides=(1, 1, 1),\n",
-    "                                 padding='valid',\n",
-    "                                 #activation=tf.nn.elu,\n",
-    "                                 kernel_initializer=tf.initializers.glorot_uniform(),\n",
-    "                                 name='enc_conv1')\n",
-    "        self._print_shape(conv1)\n",
-    "        # the Example VAE specifies the activation functions as part of the layer\n",
-    "        # we specify the activation function as a seperate tensor\n",
-    "        # it is unknown if this is the preferred method in Tensorflow, but we know\n",
-    "        # it works from work in the 3D-VAE-GAN notebook\n",
-    "        # we also take advantage of batch_normalization\n",
-    "        # more info here:\n",
-    "        # https://medium.com/@ilango100/batch-normalization-speed-up-neural-network-training-245e39a62f85\n",
-    "        # with the hope that it gives speed without sacrificing quality\n",
-    "        # tf batch norm: https://www.tensorflow.org/api_docs/python/tf/layers/batch_normalization\n",
-    "        # tf elu (exponential linear unit): https://www.tensorflow.org/api_docs/python/tf/nn/elu\n",
-    "        lrelu1 = tf.nn.elu(tf.layers.batch_normalization(conv1, training=trainable), name='enc_lrelu1')\n",
-    "        self._print_shape(lrelu1)\n",
-    "\n",
-    "        conv2 = tf.layers.conv3d(lrelu1,\n",
-    "                                 filters=16,\n",
-    "                                 kernel_size=[3, 3, 3],\n",
-    "                                 strides=(2, 2, 2),\n",
-    "                                 padding='same',\n",
-    "                                 kernel_initializer=tf.initializers.glorot_uniform(),\n",
-    "                                 name='enc_conv2')\n",
-    "        self._print_shape(conv2)\n",
-    "        lrelu2 = tf.nn.elu(tf.layers.batch_normalization(conv2, training=trainable), name='enc_lrelu2')\n",
-    "        self._print_shape(lrelu2)\n",
-    "\n",
-    "        conv3 = tf.layers.conv3d(lrelu2,\n",
-    "                                 filters=32,\n",
-    "                                 kernel_size=[3, 3, 3],\n",
-    "                                 strides=(1, 1, 1),\n",
-    "                                 padding='valid',\n",
-    "                                 kernel_initializer=tf.initializers.glorot_uniform(),\n",
-    "                                 name='enc_conv3')\n",
-    "        self._print_shape(conv3)\n",
-    "        lrelu3 = tf.nn.elu(tf.layers.batch_normalization(conv3, training=trainable), name='enc_lrelu3')\n",
-    "        self._print_shape(lrelu3)\n",
     "        \n",
-    "        conv4 = tf.layers.conv3d(lrelu3,\n",
-    "                                 filters=64,\n",
-    "                                 kernel_size=[3, 3, 3],\n",
-    "                                 strides=(2, 2, 2),\n",
-    "                                 padding='same',\n",
-    "                                 kernel_initializer=tf.initializers.glorot_uniform(),\n",
-    "                                 name='enc_conv4')\n",
-    "        self._print_shape(conv4)\n",
-    "        lrelu4 = tf.nn.elu(tf.layers.batch_normalization(conv4, training=trainable), name='enc_lrelu4')\n",
-    "        self._print_shape(lrelu4)\n",
-    "        \n",
-    "        # Apply one fully-connected layer after Conv3d layers\n",
-    "        # tf dense layer: https://www.tensorflow.org/api_docs/python/tf/layers/dense\n",
-    "        dense1 = tf.layers.dense(lrelu4,\n",
+    "        with tf.variable_scope('encoder', reuse=tf.AUTO_REUSE):\n",
+    "            # tf conv3d: https://www.tensorflow.org/api_docs/python/tf/layers/conv3d\n",
+    "            # tf glorot init: https://www.tensorflow.org/api_docs/python/tf/glorot_uniform_initializer\n",
+    "            conv1 = tf.layers.batch_normalization(tf.layers.conv3d(input_x,\n",
+    "                                     filters=8,\n",
+    "                                     kernel_size=[3, 3, 3],\n",
+    "                                     strides=(1, 1, 1),\n",
+    "                                     padding='valid',\n",
+    "                                     activation=tf.nn.elu,\n",
+    "                                     kernel_initializer=tf.initializers.glorot_uniform()))\n",
+    "            self._print_shape(conv1)\n",
+    "            # the Example VAE specifies the activation functions as part of the layer\n",
+    "            # we specify the activation function as a seperate tensor\n",
+    "            # it is unknown if this is the preferred method in Tensorflow, but we know\n",
+    "            # it works from work in the 3D-VAE-GAN notebook\n",
+    "            # we also take advantage of batch_normalization\n",
+    "            # more info here:\n",
+    "            # https://medium.com/@ilango100/batch-normalization-speed-up-neural-network-training-245e39a62f85\n",
+    "            # with the hope that it gives speed without sacrificing quality\n",
+    "            # tf batch norm: https://www.tensorflow.org/api_docs/python/tf/layers/batch_normalization\n",
+    "            # tf elu (exponential linear unit): https://www.tensorflow.org/api_docs/python/tf/nn/elu\n",
+    "\n",
+    "            conv2 = tf.layers.batch_normalization(tf.layers.conv3d(conv1,\n",
+    "                                     filters=16,\n",
+    "                                     kernel_size=[3, 3, 3],\n",
+    "                                     strides=(2, 2, 2),\n",
+    "                                     padding='same',\n",
+    "                                     activation=tf.nn.elu,\n",
+    "                                     kernel_initializer=tf.initializers.glorot_uniform()))\n",
+    "            self._print_shape(conv2)\n",
+    "\n",
+    "            conv3 = tf.layers.batch_normalization(tf.layers.conv3d(conv2,\n",
+    "                                     filters=32,\n",
+    "                                     kernel_size=[3, 3, 3],\n",
+    "                                     strides=(1, 1, 1),\n",
+    "                                     padding='valid',\n",
+    "                                     activation=tf.nn.elu,\n",
+    "                                     kernel_initializer=tf.initializers.glorot_uniform()))\n",
+    "            self._print_shape(conv3)\n",
+    "\n",
+    "            conv4 = tf.layers.batch_normalization(tf.layers.conv3d(conv3,\n",
+    "                                     filters=64,\n",
+    "                                     kernel_size=[3, 3, 3],\n",
+    "                                     strides=(2, 2, 2),\n",
+    "                                     padding='same',\n",
+    "                                     activation=tf.nn.elu,\n",
+    "                                     kernel_initializer=tf.initializers.glorot_uniform()))\n",
+    "            self._print_shape(conv4)\n",
+    "\n",
+    "            # Apply one fully-connected layer after Conv3d layers\n",
+    "            # tf dense layer: https://www.tensorflow.org/api_docs/python/tf/layers/dense\n",
+    "            dense1 = tf.layers.batch_normalization(tf.layers.dense(conv4,\n",
     "                                 units=343,\n",
-    "                                 kernel_initializer=tf.initializers.glorot_uniform(),\n",
-    "                                 name='enc_dense1')\n",
-    "        self._print_shape(dense1)\n",
-    "        network_output = tf.nn.elu(tf.layers.batch_normalization(dense1, training=trainable), name='enc_lrelu5')\n",
-    "        self._print_shape(network_output)\n",
+    "                                 activation=tf.nn.elu,\n",
+    "                                 kernel_initializer=tf.initializers.glorot_uniform()))\n",
+    "            self._print_shape(dense1)\n",
+    "            flatten = tf.layers.flatten(tf.nn.dropout(dense1, keep_prob))\n",
     "        \n",
+    "            enc_mu = tf.layers.batch_normalization(tf.layers.dense(flatten,\n",
+    "                                 units=self.latent_dim,\n",
+    "                                 activation=None))\n",
+    "            self._print_shape(enc_mu)\n",
+    "            enc_sig = tf.layers.batch_normalization(tf.layers.dense(flatten,\n",
+    "                                 units=self.latent_dim,\n",
+    "                                 activation=None))\n",
+    "            self._print_shape(enc_sig)\n",
+    "                                                  \n",
+    "            # epsilon is a random draw from the latent space\n",
+    "            epsilon = tf.random_normal(tf.stack([tf.shape(dense1)[0], self.latent_dim]))\n",
+    "            self._print_shape(epsilon, 'epsilon')\n",
+    "            enc_z = enc_mu + tf.multiply(epsilon, tf.exp(enc_sig))\n",
+    "            self._print_shape(enc_z, 'z')\n",
+    "        return enc_z, enc_mu, enc_sig\n",
+    "\n",
+    "\n",
     "        # apply dropout to prevent overtraining\n",
     "        # why do we flatten?\n",
     "        enc_output = tf.layers.flatten(tf.nn.dropout(network_output, keep_prob), name='enc_output')\n",
     "        self._print_shape(enc_output)\n",
-    "        \n",
     "        # transform the network output into the latent vector\n",
     "        z_mu = tf.layers.dense(enc_output,\n",
     "                         units=self.latent_dim,\n",
@@ -241,13 +249,13 @@
     "        # Here we borrow sigma calc from 3D-VAE-GAN\n",
     "        z_sig = 0.5 * tf.layers.dense(enc_output, units=self.latent_dim, name='enc_sig')\n",
     "        self._print_shape(z_sig, 'enc_sig')\n",
-    "        \n",
+    "\n",
     "        # epsilon is a random draw from the latent space\n",
     "        epsilon = tf.random_normal(tf.stack([tf.shape(enc_output)[0], self.latent_dim]))\n",
     "        self._print_shape(epsilon, 'epsilon')\n",
     "        z = z_mu + tf.multiply(epsilon, tf.exp(z_sig))\n",
     "        self._print_shape(z, 'z')\n",
-    "        \n",
+    "\n",
     "        return z, z_mu, z_sig\n",
     "    \n",
     "    def _make_decoder(self, input_z, trainable):\n",
@@ -388,8 +396,8 @@
     "        # remove kl for fun\n",
     "        #loss = tf.reduce_mean(self.recon_loss_weight * recon_loss)\n",
     "        \n",
-    "        optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(loss)\n",
-    "        #optimizer = tf.train.MomentumOptimizer(learning_rate=self.learning_rate, momentum=0.9, use_nesterov=True).minimize(loss)\n",
+    "        #optimizer = tf.train.AdamOptimizer(learning_rate=self.learning_rate).minimize(loss)\n",
+    "        optimizer = tf.train.MomentumOptimizer(learning_rate=self.learning_rate, momentum=0.9, use_nesterov=True).minimize(loss)\n",
     "\n",
     "        return loss, optimizer, recon_loss, kl_divergence\n",
     "        \n",
@@ -506,100 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'enc_conv1/kernel:0' shape=(3, 3, 3, 1, 8) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv1/bias:0' shape=(8,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization/gamma:0' shape=(8,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization/beta:0' shape=(8,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv2/kernel:0' shape=(3, 3, 3, 8, 16) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv2/bias:0' shape=(16,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_1/gamma:0' shape=(16,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_1/beta:0' shape=(16,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv3/kernel:0' shape=(3, 3, 3, 16, 32) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv3/bias:0' shape=(32,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_2/gamma:0' shape=(32,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_2/beta:0' shape=(32,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv4/kernel:0' shape=(3, 3, 3, 32, 64) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_conv4/bias:0' shape=(64,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_3/gamma:0' shape=(64,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_3/beta:0' shape=(64,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_dense1/kernel:0' shape=(64, 343) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_dense1/bias:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_4/gamma:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_4/beta:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_mu/kernel:0' shape=(117649, 100) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_mu/bias:0' shape=(100,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_sig/kernel:0' shape=(117649, 100) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'enc_sig/bias:0' shape=(100,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_dense1/kernel:0' shape=(100, 343) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_dense1/bias:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_5/gamma:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_5/beta:0' shape=(343,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_conv1/kernel:0' shape=(3, 3, 3, 64, 1) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_6/gamma:0' shape=(64,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_6/beta:0' shape=(64,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_conv2/kernel:0' shape=(3, 3, 3, 32, 64) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_7/gamma:0' shape=(32,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_7/beta:0' shape=(32,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_conv3/kernel:0' shape=(3, 3, 3, 16, 32) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_8/gamma:0' shape=(16,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_8/beta:0' shape=(16,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_conv4/kernel:0' shape=(4, 4, 4, 8, 16) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_9/gamma:0' shape=(8,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'batch_normalization_9/beta:0' shape=(8,) dtype=float32_ref>\n",
-      "\n",
-      "<tf.Variable 'dec_conv5/kernel:0' shape=(3, 3, 3, 1, 8) dtype=float32_ref>\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tf.reset_default_graph()\n",
     "VOXELS_DIM = 32\n",
@@ -615,9 +534,9 @@
     "                                 verbose=False)\n",
     "\n",
     "    generator = lambda: thingi.voxels_batchmaker(batch_size=BATCH_SIZE, voxels_dim=VOXELS_DIM, verbose=False)\n",
-    "    T_vars = tf.trainable_variables()\n",
-    "    [print(\"{}\\n\".format(v)) for v in T_vars]\n",
-    "    #vae.train(generator, epochs=500, input_repeats=5, display_step=50, save_step=100)\n",
+    "    #T_vars = tf.trainable_variables()\n",
+    "    #[print(\"{}\\n\".format(v)) for v in T_vars]\n",
+    "    vae.train(generator, epochs=50, input_repeats=1, display_step=5, save_step=100)\n",
     "except Exception as exc:\n",
     "    vae.close()\n",
     "    raise(exc)"
@@ -625,9 +544,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------\n",
+      "0\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[ 5073 27695]\n",
+      "--------------\n",
+      "1\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  835 31933]\n",
+      "--------------\n",
+      "2\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[   26 32742]\n",
+      "--------------\n",
+      "3\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  106 32662]\n",
+      "--------------\n",
+      "4\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  123 32645]\n",
+      "--------------\n",
+      "5\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  196 32572]\n",
+      "--------------\n",
+      "6\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  186 32582]\n",
+      "--------------\n",
+      "7\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[  156 32612]\n",
+      "--------------\n",
+      "8\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[   92 32676]\n",
+      "--------------\n",
+      "9\n",
+      "True\n",
+      "False\n",
+      "[False  True]\n",
+      "[   47 32721]\n"
+     ]
+    }
+   ],
    "source": [
     "for i, recon in enumerate(vae.recons_post):\n",
     "    print('--------------')\n",
