running voxel vae on full dataset

--- a/notebooks/stl_voxel_vae.ipynb
+++ b/notebooks/stl_voxel_vae.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,8 @@
     "\n",
     "            for batch_num, batch in enumerate(generator()):\n",
     "                \n",
-    "                #print('Epoch: {}, Batch: {}'.format(epoch_num, batch_num))\n",
+    "                if self.verbose:\n",
+    "                    print('Epoch: {}, Batch: {}'.format(epoch_num, batch_num))\n",
     "                #print(\"batch.min()\", batch.min())\n",
     "                #print(\"batch.max()\", batch.max())\n",
     "                # repeat for extra practice on each shape\n",
@@ -518,11 +519,59 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "encoder/batch_normalization/batchnorm/add_1:0: (?, 30, 30, 30, 8)\n",
+      "encoder/batch_normalization_1/batchnorm/add_1:0: (?, 15, 15, 15, 16)\n",
+      "encoder/batch_normalization_2/batchnorm/add_1:0: (?, 13, 13, 13, 32)\n",
+      "encoder/batch_normalization_3/batchnorm/add_1:0: (?, 7, 7, 7, 64)\n",
+      "encoder/batch_normalization_4/batchnorm/add_1:0: (?, 7, 7, 7, 343)\n",
+      "encoder/batch_normalization_5/batchnorm/add_1:0: (?, 100)\n",
+      "encoder/batch_normalization_6/batchnorm/add_1:0: (?, 100)\n",
+      "epsilon: (?, 100)\n",
+      "z: (?, 100)\n",
+      "input_z: (?, 100)\n",
+      "dec_dense1/BiasAdd:0: (?, 343)\n",
+      "Elu:0: (?, 343)\n",
+      "reshape_z:0: (?, 7, 7, 7, 1)\n",
+      "dec_conv1/conv3d_transpose:0: (?, 7, 7, 7, 64)\n",
+      "dec_lrelu2:0: (?, 7, 7, 7, 64)\n",
+      "dec_conv2/conv3d_transpose:0: (?, 15, 15, 15, 32)\n",
+      "dec_lrelu3:0: (?, 15, 15, 15, 32)\n",
+      "dec_conv3/conv3d_transpose:0: (?, 15, 15, 15, 16)\n",
+      "dec_lrelu4:0: (?, 15, 15, 15, 16)\n",
+      "dec_conv4/conv3d_transpose:0: (?, 32, 32, 32, 8)\n",
+      "dec_lrelu5:0: (?, 32, 32, 32, 8)\n",
+      "dec_conv5/conv3d_transpose:0: (?, 32, 32, 32, 1)\n",
+      "Sigmoid:0: (?, 32, 32, 32, 1)\n",
+      "Epoch: 0, Batch: 0\n",
+      "Epoch: 0, Batch: 1\n",
+      "Epoch: 0, Batch: 2\n",
+      "Epoch: 0, Batch: 3\n",
+      "Epoch: 0, Batch: 4\n",
+      "Epoch: 0, Batch: 5\n",
+      "Epoch: 0, Batch: 6\n",
+      "Epoch: 0, Batch: 7\n",
+      "Epoch: 0, Batch: 8\n",
+      "Epoch: 0, Batch: 9\n",
+      "Epoch: 0, Batch: 10\n",
+      "Epoch: 0, Batch: 11\n",
+      "Epoch: 0, Batch: 12\n",
+      "Epoch: 0, Batch: 13\n",
+      "Epoch: 0, Batch: 14\n",
+      "Epoch: 0, Batch: 15\n",
+      "Epoch: 0, Batch: 16\n",
+      "Epoch: 0, Batch: 17\n"
+     ]
+    }
+   ],
    "source": [
     "tf.reset_default_graph()\n",
     "VOXELS_DIM = 32\n",
-    "BATCH_SIZE = 20\n",
+    "BATCH_SIZE = 64\n",
     "\n",
     "try:\n",
     "    vae = VariationalAutoencoder(input_dim=VOXELS_DIM,\n",
@@ -531,7 +580,7 @@
     "                                 keep_prob=1.0,\n",
     "                                 kl_div_loss_weight=1,\n",
     "                                 recon_loss_weight=1e4,\n",
-    "                                 verbose=False)\n",
+    "                                 verbose=True)\n",
     "\n",
     "    generator = lambda: thingi.voxels_batchmaker(batch_size=BATCH_SIZE, voxels_dim=VOXELS_DIM, verbose=False)\n",
     "    #T_vars = tf.trainable_variables()\n",
