demonstrated ModelNet10 class in ModelNet10 notebook

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -24,6 +24,10 @@
    "source": [
     "import env\n",
     "from train_vaegan import train_vaegan\n",
+    "from data.thingi10k import Thingi10k\n",
+    "from data.modelnet10 import ModelNet10\n",
+    "from data import MODELNET10_TOILET_INDEX\n",
+    "\n",
     "\n",
     "# plot things\n",
     "%matplotlib inline\n",
@@ -85,6 +89,7 @@
     "    cfg = {\n",
     "        'cfg': {\n",
     "            \"dataset\": {\n",
+    "                \"class\": ModelNet10\n",
     "                \"index\": \"../data/processed/thingi10k_index.csv\",\n",
     "                \"tag\": \"animal\",\n",
     "                #\"filter_id\": 126660,\n",
