train_vaegan now saves cfg

--- a/notebooks/train_vaegan.ipynb
+++ b/notebooks/train_vaegan.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,6 +27,7 @@
     "from data.thingi10k import Thingi10k\n",
     "from data.modelnet10 import ModelNet10\n",
     "from data import MODELNET10_TOILET_INDEX\n",
+    "from models import MODEL_DIR\n",
     "\n",
     "\n",
     "# plot things\n",
@@ -45,12 +46,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sacred.observers import FileStorageObserver\n",
     "from sacred import Experiment\n",
+    "import os\n",
     "\n",
     "ex = Experiment(name='voxel_vaegan_notebook', interactive=True)\n",
     "ex.observers.append(FileStorageObserver.create('experiments_vaegan'))\n",
@@ -78,16 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_CLASS = ModelNet10\n",
+    "DATASET_CLASS = 'ModelNet10'\n",
     "INDEX = MODELNET10_TOILET_INDEX\n",
     "\n",
     "def make_cfg():\n",
-    "    MODEL_DIR = 'voxel_vaegan1/modelnet10/{}'.format(datetime.datetime.now().strftime('%Y-%m-%d_%H-%M-%S'))\n",
-    "    print(MODEL_DIR)\n",
+    "    model_dir = os.path.join(MODEL_DIR, 'voxel_vaegan1/modelnet10/{}'.format(datetime.datetime.now().strftime('%Y-%m-%d_%H-%M-%S')))\n",
+    "    print(model_dir)\n",
+    "    os.makedirs(model_dir)\n",
     "\n",
     "    cfg = {\n",
     "        'cfg': {\n",
@@ -109,7 +112,7 @@
     "                \"pad\": True\n",
     "            }, \n",
     "            \"model\": {\n",
-    "                \"ckpt_dir\": MODEL_DIR,\n",
+    "                \"ckpt_dir\": model_dir,\n",
     "                \"voxels_dim\": 32,\n",
     "                \"batch_size\": 128,\n",
     "                # Do 0.0001 for 1 epoch, then 0.001 for rest of training\n",
@@ -151,15 +154,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['pgrep', 'tensorboard'] yielded -> b'17553\\n'\n",
-      "killed b'17553'!\n"
+      "['pgrep', 'tensorboard'] yielded -> b''\n"
      ]
     }
    ],
@@ -185,27 +187,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "voxel_vaegan1/modelnet10/2019-03-14_14-25-14\n",
+      "voxel_vaegan1/modelnet10/2019-03-14_15-17-11\n",
       "['pgrep', 'tensorboard'] yielded -> b''\n"
      ]
     }
    ],
    "source": [
     "cfg = make_cfg()\n",
-    "MODEL_DIR = cfg.get('cfg').get('model').get('ckpt_dir')\n",
+    "model_dir = cfg.get('cfg').get('model').get('ckpt_dir')\n",
     "kill_tensorboard()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -240,57 +242,43 @@
       "WARNING - root - Added new config entry: \"cfg.model.voxel_prob_threshold\"\n",
       "WARNING - root - Added new config entry: \"cfg.model.voxels_dim\"\n",
       "INFO - voxel_vaegan_notebook - Running command 'run_experiment'\n",
-      "INFO - voxel_vaegan_notebook - Started run with ID \"106\"\n"
+      "INFO - voxel_vaegan_notebook - Started run with ID \"112\"\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logging to /home/jcworkma/jack/3d-form/src/logs/2019-03-14_14-25__root.log\n",
+      "Logging to /home/jcworkma/jack/3d-form/src/logs/2019-03-14_15-16__root.log\n",
       "Starting train_vaegan main\n",
-      "Numpy random seed: 943197061\n",
-      "Dataset: <class 'data.modelnet10.ModelNet10'>\n",
-      "Using dataset index /home/jcworkma/jack/3d-form/src/../data/processed/modelnet10_toilet_index.csv and pctile None\n",
-      "Shuffling dataset\n",
-      "dataset n_input=7104\n",
-      "Splitting Datasets\n",
-      "Num input = 7104\n",
-      "Num batches per epoch = 55.50\n",
-      "Initializing VoxelVaegan\n",
-      "Running VAE-GAN in VAE-Only Mode\n",
-      "['tensorboard', '--logdir', 'current:/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-14_14-25-14/tb,best:/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/2019-03-12_16-36-25/tb']\n",
-      "Epoch: 0, Elapsed Time: 0.01\n",
-      "Epoch: 0 / 1, Batch: 0 (0 / 128), Elapsed time: 0.01 mins\n",
-      "Enc Loss = 1113.09, KL Divergence = 59.24, Reconstruction Loss = 14533.86, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.08 mins\n",
-      "Epoch: 0 / 1, Batch: 1 (0 / 256), Elapsed time: 0.08 mins\n",
-      "Enc Loss = 1041.19, KL Divergence = 192.75, Reconstruction Loss = 13551.99, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.14 mins\n",
-      "Epoch: 0 / 1, Batch: 2 (0 / 384), Elapsed time: 0.15 mins\n",
-      "Enc Loss = 1066.24, KL Divergence = 60.15, Reconstruction Loss = 13955.12, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.21 mins\n",
-      "Epoch: 0 / 1, Batch: 3 (0 / 512), Elapsed time: 0.21 mins\n",
-      "Enc Loss = 1147.78, KL Divergence = 58.23, Reconstruction Loss = 14965.39, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.27 mins\n",
-      "Epoch: 0 / 1, Batch: 4 (0 / 640), Elapsed time: 0.27 mins\n",
-      "Enc Loss = 1138.71, KL Divergence = 74.36, Reconstruction Loss = 14868.00, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.34 mins\n",
-      "Epoch: 0 / 1, Batch: 5 (0 / 768), Elapsed time: 0.34 mins\n",
-      "Enc Loss = 1121.93, KL Divergence = 66.41, Reconstruction Loss = 14660.32, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.40 mins\n",
-      "Epoch: 0 / 1, Batch: 6 (0 / 896), Elapsed time: 0.40 mins\n",
-      "Enc Loss = 1120.50, KL Divergence = 42.08, Reconstruction Loss = 14695.42, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.46 mins\n",
-      "Epoch: 0 / 1, Batch: 7 (0 / 1024), Elapsed time: 0.46 mins\n",
-      "Enc Loss = 1122.71, KL Divergence = 28.96, Reconstruction Loss = 14706.61, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.53 mins\n",
-      "Epoch: 0 / 1, Batch: 8 (0 / 1152), Elapsed time: 0.53 mins\n",
-      "Enc Loss = 1056.84, KL Divergence = 32.43, Reconstruction Loss = 13887.32, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.59 mins\n",
-      "Epoch: 0 / 1, Batch: 9 (0 / 1280), Elapsed time: 0.59 mins\n",
-      "Enc Loss = 1101.29, KL Divergence = 39.08, Reconstruction Loss = 14431.11, -dis_Loss = 999.00, dec_Loss = -999.00, Elapsed time: 0.65 mins\n",
-      "Epoch: 0 / 1, Batch: 10 (0 / 1408), Elapsed time: 0.65 mins\n"
+      "Numpy random seed: 755804358\n",
+      "Stopping Heartbeat\n",
+      "Failed after 0:00:00!\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-14_15-16-10/cfg.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-f23fb64bfe96>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mlast_model_dir\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMODEL_DIR\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_updates\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/experiment.py\u001b[0m in \u001b[0;36mrun\u001b[0;34m(self, command_name, config_updates, named_configs, meta_info, options)\u001b[0m\n\u001b[1;32m    207\u001b[0m         run = self._create_run(command_name, config_updates, named_configs,\n\u001b[1;32m    208\u001b[0m                                meta_info, options)\n\u001b[0;32m--> 209\u001b[0;31m         \u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    210\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mrun\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    211\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/run.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args)\u001b[0m\n\u001b[1;32m    219\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_start_heartbeat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    220\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute_pre_run_hooks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 221\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    222\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_execute_post_run_hooks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    223\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/.3d-form/lib/python3.5/site-packages/sacred/config/captured_function.py\u001b[0m in \u001b[0;36mcaptured_function\u001b[0;34m(wrapped, instance, args, kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m         \u001b[0mstart_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;31m# =================== run actual function =================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m     \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m     \u001b[0;31m# =========================================================================\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mwrapped\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogger\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-c246947c91ce>\u001b[0m in \u001b[0;36mrun_experiment\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m@\u001b[0m\u001b[0mex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrun_experiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mtrain_vaegan\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/jack/3d-form/src/train_vaegan.py\u001b[0m in \u001b[0;36mtrain_vaegan\u001b[0;34m(cfg)\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0mcfg_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mMODEL_DIR\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcfg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'ckpt_dir'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'cfg.json'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 41\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     42\u001b[0m         \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Saved cfg: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcfg_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/jcworkma/jack/3d-form/src/../models/voxel_vaegan1/modelnet10/2019-03-14_15-16-10/cfg.json'"
      ]
     }
    ],
    "source": [
-    "if last_model_dir == MODEL_DIR:\n",
+    "if last_model_dir == model_dir:\n",
     "    print('dont overwrite!')\n",
     "    assert False\n",
     "else:\n",
-    "    last_model_dir = MODEL_DIR\n",
+    "    last_model_dir = model_dir\n",
     "\n",
     "ex.run(config_updates=cfg)"
    ]
